--- a/systems_time_domain/spring_pendulum_analysis.ipynb
+++ b/systems_time_domain/spring_pendulum_analysis.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "## Analysis of a Damped Spring Pendulum\n",
     "\n",
-    "The damped [spring pendulum](https://en.wikipedia.org/wiki/Spring_pendulum) is an example for a physical system that can be modeled by a linear ordinary differential equation (ODE) with constant coefficients. In view of the theory of signals and systems it hence can be interpreted as a linear time-invariant (LTI) system. The mechanical properties of the damped spring pendulum are analyzed by using the theory of LTI systems. The underlying mechanical setup is depicted in the following\n",
+    "The damped [spring pendulum](https://en.wikipedia.org/wiki/Spring_pendulum) is an example for a mechanical system that can be modeled by a linear ordinary differential equation (ODE) with constant coefficients. In view of the theory of signals and systems it hence can be interpreted as a linear time-invariant (LTI) system. The mechanical properties of the damped spring pendulum are analyzed by using the theory of LTI systems. The underlying mechanical setup is depicted in the following\n",
     "\n",
     "![Damped spring pendulum](damped_spring.png)\n",
     "\n",
@@ -44,7 +44,7 @@
     "F_\\text{S}(t) = k y(t)\n",
     "\\end{equation}\n",
     "\n",
-    "Its common to model the frictional force $F_\\text{F}(t)$ as being proportional to the velocity of the mass\n",
+    "Its common to model the frictional force $F_\\text{F}(t)$ induced by the damper as being proportional to the velocity of the mass\n",
     "\n",
     "\\begin{equation}\n",
     "F_\\text{F}(t) = c \\frac{d y(t)}{dt}\n",
@@ -185,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h = solution_h.subs(integration_constants).rhs\n",
+    "h = solution_h.subs(integration_constants)\n",
     "h"
    ]
   },
@@ -202,7 +202,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sym.plot(h.subs(mck), (t,0,12), ylabel=r'h(t)');"
+    "sym.plot(h.rhs.subs(mck), (t,0,12), ylabel=r'h(t)');"
    ]
   },
   {
