Revised interpretation of spectrum, minor changes to rest

--- a/fourier_transform/definition.ipynb
+++ b/fourier_transform/definition.ipynb
@@ -69,13 +69,13 @@
     "x(t) = \\epsilon(t) \\cdot e^{- \\alpha t} \n",
     "\\end{equation}\n",
     "\n",
-    "with $\\alpha \\in \\mathbb{R}^+$ is derived from the Laplace transform of the [causal complex exponential signal](#Transformation-of-the-Causal-Complex-Exponential-Signal). Using the substituting $s_0 = \\alpha$ yields\n",
+    "with $\\alpha \\in \\mathbb{R}^+$ is derived from the Laplace transform of the [causal complex exponential signal](#Transformation-of-the-Causal-Complex-Exponential-Signal). Using the substitution $s_0 = \\alpha$ yields\n",
     "\n",
     "\\begin{equation}\n",
     "X(s) = \\frac{1}{s + \\alpha}\n",
     "\\end{equation}\n",
     "\n",
-    "with the ROC $\\Re \\{ s \\} > - \\alpha$. Hence for $0 < \\alpha < \\infty$, the ROC includes the imaginary axis. The Fourier transform can be derived from the Laplace transform as\n",
+    "with the ROC $\\Re \\{ s \\} > - \\alpha$. Hence for $0 < \\alpha < \\infty$, the ROC includes the imaginary axis. In this case the signal comprises an exponential signal whose level decays over time for $t>0$. The Fourier transform can be derived from the Laplace transform as\n",
     "\n",
     "\\begin{equation}\n",
     "X(j \\omega) = \\frac{1}{j \\omega + \\alpha}\n",
@@ -88,9 +88,19 @@
    "source": [
     "### Interpretation of the Spectrum\n",
     "\n",
-    "The Fourier transform is in general complex valued, $X(j \\omega) \\in \\mathbb{C}$. It is commonly represented by its real and imaginary part $X(j \\omega) = \\Re \\{ X(j \\omega) \\} + j \\cdot \\Im \\{ X(j \\omega) \\}$ or by its magnitude and phase $X(j \\omega) = |X(j \\omega)| \\cdot e^{j \\varphi(j \\omega)}$. It can be concluded from the inverse Fourier transformation that a signal $x(t)$ for which the Fourier transform $X(j \\omega)$ exists can be represented as a superposition of weighted harmonic exponential signals $X(j \\omega) \\cdot e^{j \\omega t}$. The magnitude spectra $|X(\\omega)|$ provides insights into the composition of an unknown signal in terms of its harmonic contributions. The angular frequency of these contributions can be related to the frequency by $f = \\frac{\\omega}{2 \\pi}$. Due to this reasoning, the Fourier transformation is a valuable tool in the analysis of signals.\n",
+    "It can be concluded from the inverse Fourier transformation \n",
     "\n",
-    "In general a spectrum $X(j \\omega)$ will also have non-negative contributions for negative angular frequencies $\\omega < 0$. The concept of [negative frequencies](https://en.wikipedia.org/wiki/Negative_frequency) has no physical meaning. However, in the context of the Fourier transformation with its complex kernel $e^{j \\omega t}$ it is required to express real-valued signals."
+    "\\begin{equation}\n",
+    "x(t) = \\frac{1}{2 \\pi} \\int_{-\\infty}^{\\infty} X(j \\omega) \\, e^{j \\omega t} \\; d\\omega\n",
+    "\\end{equation}\n",
+    "\n",
+    "that a signal $x(t)$ for which the Fourier transform $X(j \\omega)$ exists can be represented as a superposition of weighted harmonic exponential signals $X(j \\omega) \\cdot e^{j \\omega t}$. The angular frequency of these contributions can be related to the frequency by $f = \\frac{\\omega}{2 \\pi}$. \n",
+    "\n",
+    "![Interpretation of the Fourier transform and its frequency axis](FT_axis.png)\n",
+    "\n",
+    "The Fourier transform is in general complex valued, $X(j \\omega) \\in \\mathbb{C}$. It is commonly represented by its real and imaginary part $X(j \\omega) = \\Re \\{ X(j \\omega) \\} + j \\cdot \\Im \\{ X(j \\omega) \\}$ or by its magnitude and phase $X(j \\omega) = |X(j \\omega)| \\cdot e^{j \\varphi(j \\omega)}$. The magnitude spectrum $|X(\\omega)|$ provides insights into the composition of an unknown signal in terms of the level of its harmonic contributions, the phase spectrum $\\varphi(j \\omega)$ into their phase relations. The Fourier transformation is therefore a valuable tool in the analysis of signals.\n",
+    "\n",
+    "A general spectrum $X(j \\omega)$ will have non-negative contributions for negative angular frequencies $\\omega < 0$. The concept of [negative frequencies](https://en.wikipedia.org/wiki/Negative_frequency) has no physical meaning. However, in the context of the Fourier transformation with its complex kernel $e^{j \\omega t}$ it is for instance required to express real-valued signals."
    ]
   },
   {
@@ -137,7 +147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`SymPy` offers also a [Fourier transform](http://docs.sympy.org/latest/modules/integrals/integrals.html?highlight=fourier#sympy.integrals.transforms.fourier_transform). However, it is defined in terms of the frequency $f$ instead of the angular frequency $\\omega$. Therefore a custom function is defined which matches the definition used here"
+    "`SymPy` provides a [Fourier transform](http://docs.sympy.org/latest/modules/integrals/integrals.html?highlight=fourier#sympy.integrals.transforms.fourier_transform). However, it is defined in terms of the frequency $f$ instead of the angular frequency $\\omega$. Therefore a custom function is defined which matches the definition used here"
    ]
   },
   {
@@ -182,7 +192,7 @@
    "source": [
     "### Transformation of the Rectangular Signal\n",
     "\n",
-    "The Fourier transform $\\mathcal{F} \\{ \\text{rect}(t) \\}$ of the [rectangular signal](../continuous_signals/standard_signals.ipynb#Rectangular-Signal) is derived by explicit evaluation of its definition\n",
+    "The Fourier transform $\\mathcal{F} \\{ \\text{rect}(t) \\}$ of the [rectangular signal](../continuous_signals/standard_signals.ipynb#Rectangular-Signal) is derived by explicit evaluation of the definition\n",
     "\n",
     "\\begin{equation}\n",
     "\\mathcal{F} \\{ \\text{rect}(t) \\} = \\int_{-\\infty}^{\\infty} \\text{rect}(t) \\, e^{-j \\omega t} \\; dt =\n",
@@ -198,7 +208,7 @@
     "\\end{cases}\n",
     "\\end{equation}\n",
     "\n",
-    "Note, that the value at $x = 0$ has been derived by applying [L'Hôpital's rule](https://en.wikipedia.org/wiki/L'H%C3%B4pital's_rule) to $\\frac{sin(x)}{x}$. The sinc function is an important function in (digital) signal processing and communications engineering. It has the following properties\n",
+    "Note, that the value at $x = 0$ has been derived by applying [L'Hôpital's rule](https://en.wikipedia.org/wiki/L'H%C3%B4pital's_rule) to $\\frac{sin(x)}{x}$. The sinc function is an important function in (digital) signal processing and communications engineering. It shows the following properties\n",
     "\n",
     "1. Its maximum value is one at $x=0$\n",
     "\n",
@@ -220,7 +230,7 @@
     "\\mathcal{L} \\{ \\text{rect}(t) \\} = \\frac{\\sinh \\left( \\frac{s}{2} \\right) }{\\frac{s}{2}}\n",
     "\\end{equation}\n",
     "\n",
-    "with the $\\text{ROC} \\{ \\text{rect}(t) \\} = \\mathbb{C}$. The FLaplace transform of the rectangular signal can be related to its Fourier transform by using $\\sinh (s) = -j \\sin(j s)$ with the substitution $s = j \\omega$\n",
+    "with the $\\text{ROC} \\{ \\text{rect}(t) \\} = \\mathbb{C}$. The Laplace transform of the rectangular signal can be related to its Fourier transform by using $\\sinh (s) = -j \\sin(j s)$ with the substitution $s = j \\omega$\n",
     "\n",
     "\\begin{equation}\n",
     "\\frac{\\sinh \\left( \\frac{s}{2} \\right) }{\\frac{s}{2}} \\Bigg\\vert_{s= j \\omega} = \\frac{\\sin \\left( \\frac{\\omega}{2} \\right) }{\\frac{\\omega}{2}}\n",
@@ -330,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
