Added proofs for scaling and multiplication theorem, minor edits

--- a/fourier_transform/theorems.ipynb
+++ b/fourier_transform/theorems.ipynb
@@ -32,7 +32,19 @@
     "\\mathcal{F} \\{ x(a t) \\} = \\frac{1}{|a|} \\cdot X \\left( \\frac{j \\omega}{a} \\right)\n",
     "\\end{equation}\n",
     "\n",
-    "The Fourier transformation of a temporally scaled signal is given by inverse scaling of the Fourier transform of the unscaled signal and weighting with $\\frac{1}{|a|}$. This relation is known as scaling theorem of the Fourier transform. It can be proven by introducing the scaled signal $x(a t)$ into the definition of the Fourier transformation together with the substitution $t' = a t$. Note that the cases $a<0$ and $a>0$ have to be regarded separately."
+    "The Fourier transformation of a temporally scaled signal is given by inverse scaling of the Fourier transform of the unscaled signal and weighting with $\\frac{1}{|a|}$. This relation is known as scaling theorem of the Fourier transform. It can be proven by introducing the scaled signal $x(a t)$ into the definition of the Fourier transformation together with the substitution $t' = a t$. For $a>0$ this reads\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\begin{split}\n",
+    "\\mathcal{F} \\{ x(a t) \\} &= \\int_{-\\infty}^{\\infty} x(a t) e^{-j \\omega t} dt \\\\\n",
+    "&= \\frac{1}{a} \\int_{-\\infty}^{\\infty} x(t') e^{-j \\frac{\\omega}{a} t'} dt' \\\\\n",
+    "&= \\frac{1}{a} X \\left( \\frac{\\omega}{a} \\right)\n",
+    "\\end{split}\n",
+    "\\end{equation}\n",
+    "\n",
+    "\n",
+    "\n",
+    "Note that the cases $a<0$ and $a>0$ have to be regarded separately."
    ]
   },
   {
@@ -41,7 +53,7 @@
    "source": [
     "**Example**\n",
     "\n",
-    "According to the scaling theorem and the [Fourier transform of the rectangular signal](definition.ipynb#Transformation-of-the-Rectangular-Signal) $\\text{rect}(t)$, the transform of the scaled rectangular signal $\\text{rect}(a t)$ is given as\n",
+    "According to the scaling theorem and the [Fourier transform of the rectangular signal](definition.ipynb#Transformation-of-the-Rectangular-Signal) $\\mathcal{F} \\{ \\text{rect}(t) \\} = \\text{sinc} \\left( \\frac{\\omega}{2} \\right)$, the transform of the scaled rectangular signal $\\text{rect}(a t)$ is given as\n",
     "\n",
     "\\begin{equation}\n",
     "\\mathcal{F} \\{ \\text{rect}(a t) \\} = \\frac{1}{|a|} \\cdot \\text{sinc} \\left( \\frac{\\omega}{2 a} \\right)\n",
@@ -140,7 +152,7 @@
     "where $H(j \\omega) = \\mathcal{F} \\{ h(t) \\}$.\n",
     "Calculation of the system response by transforming the problem into the Fourier domain can be beneficial since this replaces the evaluation of the convolution integral by a scalar multiplication. The (inverse) Fourier transforms are known for many signals or can be derived by applying the properties and theorems to standard signals and their transforms. This procedure simplifies the calculation of the system response significantly in many cases.\n",
     "\n",
-    "The convolution theorem can also be useful to derive an unknown Fourier transform. The key is here to express the signal as convolution of two other signals for which the Fourier transforms are known. This is illustrated at the following example."
+    "The convolution theorem can also be useful to derive an unknown Fourier transform. The key is here to express the signal as convolution of two other signals for which the Fourier transforms are known. This is illustrated by the following example."
    ]
   },
   {
@@ -190,7 +202,7 @@
     "**Exercise**\n",
     "\n",
     "* Extend above example by temporal scaling of the triangular signal.\n",
-    "* Derive the Fourier transform of a trapezoidal shaped signal by convolving two rectangular signals with different width."
+    "* Derive the Fourier transform of a trapezoidal shaped signal by convolving two rectangular signals of different width."
    ]
   },
   {
@@ -240,7 +252,13 @@
     "\\mathcal{F} \\left\\{ \\frac{d x(t)}{dt} \\right\\} = j \\omega \\cdot X(j \\omega)\n",
     "\\end{equation}\n",
     "\n",
-    "where $X(j \\omega) = \\mathcal{F} \\{ x(t) \\}$. The Fourier transform $\\mathcal{F} \\{ \\frac{d \\delta(t)}{dt} \\} = j \\omega$ can be derived by applying the definition of the Fourier transform together with the derivation property of the Dirac impulse. Above result is known as differentiation theorem of the Fourier transform. It states that the differentiation of a signal in the time domain is equivalent to a multiplication of its spectrum by $j \\omega$. \n",
+    "where $X(j \\omega) = \\mathcal{F} \\{ x(t) \\}$. The Fourier transform $\\mathcal{F} \\{ \\frac{d \\delta(t)}{dt} \\} = j \\omega$ can be derived by applying the definition of the Fourier transform together with the derivation property of the Dirac impulse. Above result is known as differentiation theorem of the Fourier transform. It states that the differentiation of a signal in the time domain is equivalent to a multiplication of its spectrum by $j \\omega$. Splitting the spectrum of the differentiated signal into its magnitude and phase\n",
+    "\n",
+    "\\begin{equation}\n",
+    "j \\omega \\cdot X(j \\omega) = |\\omega \\, X(j \\omega)| \\; e^{j (\\varphi(j \\omega) + \\frac{\\pi}{2} )}\n",
+    "\\end{equation}\n",
+    "\n",
+    "reveals that differentiation of a signal results in an attenuation of the higher frequencies of its magnitude spectrum and adds a phase shift of $\\frac{\\pi}{2}$.\n",
     "\n",
     "The main applications of the differentiation theorem are the transformation of differential equations or the derivation of transforms of signals which can be expressed as derivatives of other signals. This latter is illustrated by the following example. "
    ]
@@ -352,15 +370,26 @@
    "source": [
     "### Multiplication Theorem\n",
     "\n",
-    "The Fourier transform of a multiplication of two signals $x(t)$ and $y(t)$ can be derived in a similar way as the convolution theorem by introducing the definition of the (inverse) Fourier transform and rearranging terms. Alternatively the duality of the Fourier transform can be applied to the [convolution theorem](#Convolution-Theorem). Both results in\n",
+    "The Fourier transform of a multiplication of two signals $x(t)$ and $y(t)$ is given as\n",
     "\n",
     "\\begin{equation}\n",
     "\\mathcal{F} \\{ x(t) \\cdot y(t) \\} = \\frac{1}{2 \\pi} X(j \\omega) * Y(j \\omega)\n",
     "\\end{equation}\n",
     "\n",
-    "The Fourier transform of a multiplication of two signals $x(t) \\cdot y(t)$ is given by the convolution of their Fourier transforms $X(j \\omega) = \\mathcal{F} \\{ x(t) \\}$ and $Y(j \\omega) = \\mathcal{F} \\{ y(t) \\}$ weighted with $\\frac{1}{2 \\pi}$. Note, the convolution is performed with respect to the angular frequency $\\omega$.\n",
+    "The Fourier transform of a multiplication of two signals $x(t) \\cdot y(t)$ is given by the convolution of their Fourier transforms $X(j \\omega) = \\mathcal{F} \\{ x(t) \\}$ and $Y(j \\omega) = \\mathcal{F} \\{ y(t) \\}$ weighted by $\\frac{1}{2 \\pi}$. Note, the convolution is performed with respect to the angular frequency $\\omega$.\n",
     "\n",
-    "Applications of the multiplication theorem include the modulation and windowing of signals. The former leads to the modulation theorem introduced later, the latter is illustrated by the following example."
+    "The multiplication theorem can be proven in a similar way as the convolution theorem by computing the inverse Fourier transform of the convolved spectra\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\begin{split}\n",
+    "\\mathcal{F}^{-1} \\left\\{ \\frac{1}{2 \\pi} X(j \\omega) * Y(j \\omega) \\right\\} &= \\frac{1}{2 \\pi} \\int_{-\\infty}^{\\infty} \\left( \\frac{1}{2 \\pi} \\int_{-\\infty}^{\\infty} X(j \\nu) \\cdot Y(j (\\omega-\\nu)) \\; d \\nu \\right) e^{j \\omega t} \\; d\\omega \\\\\n",
+    "&= \\frac{1}{2 \\pi} \\int_{-\\infty}^{\\infty} \\left( \\frac{1}{2 \\pi} \\int_{-\\infty}^{\\infty} Y(j (\\omega-\\nu)) \\, e^{j \\omega t} \\; d\\omega \\right) X(j \\nu) \\; d\\nu \\\\\n",
+    "&= y(t) \\cdot \\frac{1}{2 \\pi} \\int_{-\\infty}^{\\infty} X(j \\nu) \\, e^{j \\nu t} \\; d \\nu \\\\\n",
+    "&= y(t) \\cdot x(t)\n",
+    "\\end{split}\n",
+    "\\end{equation}\n",
+    "\n",
+    "Alternatively the duality of the Fourier transform can be applied to the [convolution theorem](#Convolution-Theorem). Applications of the multiplication theorem include the modulation and windowing of signals. The former leads to the modulation theorem introduced later, the latter is illustrated by the following example."
    ]
   },
   {
@@ -369,7 +398,7 @@
    "source": [
     "**Example**\n",
     "\n",
-    "Windowing of signals is often applied to derive signals of finite duration from signals with infinite duration. Here the signal $x(t)$ is multiplied by a weighting function $w(t)$ in order to derive the finite length signal \n",
+    "Windowing of signals is often applied to derive signals of finite duration from signals of infinite duration. Here the signal $x(t)$ is multiplied by a weighting function $w(t)$ in order to derive the finite length signal \n",
     "\n",
     "\\begin{equation}\n",
     "y(t) = w(t) \\cdot x(t)\n",
@@ -470,7 +499,7 @@
     "= X \\big( j \\, (\\omega - \\omega_0) \\big)\n",
     "\\end{equation}\n",
     "\n",
-    "where $X(j \\omega) = \\mathcal{F} \\{ x(t) \\}$.  Above result states that the complex modulation of a signal leads to a shift of its spectrum. For $\\omega_0 > 0$ the spectrum is shifted to higher frequencies. This lays the ground for the wireless transmission of signals. Above result is known as modulation theorem."
+    "where $X(j \\omega) = \\mathcal{F} \\{ x(t) \\}$.  Above result states that the complex modulation of a signal leads to a shift of its spectrum. For $\\omega_0 > 0$ the spectrum is shifted to higher frequencies. This lays the ground for wireless transmission of signals. Above result is known as modulation theorem."
    ]
   },
   {
@@ -527,7 +556,7 @@
    "source": [
     "**Exercise**\n",
     "\n",
-    "* Derive the spectrum of the signal $x(t)$ modulated by $\\cos(\\omega_0 t)$. Hint: Express $\\cos(\\omega_0 t)$ by Euler's formula and exploit the linearity of the Fourier transform. What is different in the resulting spectrum when comparing to the result above?"
+    "* Derive the spectrum of the signal $x(t)$ modulated by $\\cos(\\omega_0 t)$. Hint: Express $\\cos(\\omega_0 t)$ by Euler's formula and exploit the linearity of the Fourier transform. What is different in the resulting spectrum when comparing to above result?"
    ]
   },
   {
@@ -636,7 +665,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
