Improved argumentation of BIBO criterion for rational transfer functions

--- a/system_properties/causality_stability.ipynb
+++ b/system_properties/causality_stability.ipynb
@@ -143,7 +143,7 @@
    "source": [
     "#### Conditions for Rational Transfer Functions\n",
     "\n",
-    "For a rational transfer function $H(s) = \\mathcal{L} \\{ h(t) \\}$, the BIBO stability of an LTI system implies constraints on the locations of its poles. These constraints are derived in the following.\n",
+    "For a rational transfer function $H(s) = \\mathcal{L} \\{ h(t) \\}$, the BIBO stability of an LTI system implies constraints on the locations of its poles. These are derived in the following.\n",
     "\n",
     "The inverse Laplace transform of a right-sided signal can be computed in closed form [using the partial fraction decomposition](../laplace_transform/inverse.ipynb#Basic-Procedure) of its Laplace transform. Applying this to the transfer function $H(s)$, the impulse response $h(t) = \\mathcal{L}^{-1} \\{ H(s) \\}$ is given as\n",
     "\n",
@@ -151,9 +151,7 @@
     "h(t) = A_0 \\cdot \\delta(t) + \\epsilon(t) \\sum_{\\mu = 1}^{L} e^{s_{\\infty \\mu} t} \\sum_{\\nu = 1}^{R_\\mu} \\frac{A_{\\mu \\nu} \\, t^{\\mu - 1}}{(\\nu -1)!}\n",
     "\\end{equation}\n",
     "\n",
-    "where $s_{\\infty \\mu}$ denotes the $\\mu$-th unique pole of $H(s)$, $R_\\mu$ its degree, $L$ the total number of different poles $\\mu = 1 \\dots L$, and $A_0$ and $A_{\\mu \\nu}$ the coefficients of the partial fraction decomposition. Above formula for the inverse Laplace transform holds only if the order $M$ of the numerator is smaller or equal to the order $N$ of the denominator. If $M > N$, the system is not stable in the BIBO sense. This statement can be proven by a counterexample. If $M > N$, powers of $s$ can be split off from the transfer function $H(s)$ by polynominal division. Lets assume that one of these terms is given by $H(s) = s$. It follows by application of the derivation theorem that $h(t) = \\frac{d}{dt} \\delta(t)$. For the bounded input signal $x(t) = \\cos(\\omega_0 t \\cdot t)$, the output signal $y(t) = \\cos(\\omega_0 t \\cdot t) * \\frac{d}{dt} \\delta(t) = \\frac{d}{dt} \\cos(\\omega_0 t \\cdot t) = - 2 \\omega_0 t \\sin(\\omega_0 t \\cdot t)$ is not bounded for $t \\to \\infty$.\n",
-    "\n",
-    "For $M \\leq N$ one has to check under which conditions above impulse response $h(t)$ is absolutely integrable. The first term $A_0 \\delta(t)$ does not pose a problem for $A_0 < \\infty$. Under the assumption $A_{\\mu \\nu} < \\infty$, the absolute integrability of the second term is checked by evaluating\n",
+    "where $s_{\\infty \\mu}$ denotes the $\\mu$-th unique pole of $H(s)$, $R_\\mu$ its degree, $L$ the total number of different poles $\\mu = 1 \\dots L$, and $A_0$ and $A_{\\mu \\nu}$ the coefficients of the partial fraction decomposition. Above formula for the inverse Laplace transform holds if the order $M$ of the numerator is smaller or equal to the order $N$ of the denominator. In this case one has to check under which conditions the impulse response $h(t)$ is absolutely integrable. The first term $A_0 \\delta(t)$ does not pose a problem for $A_0 < \\infty$. Under the assumption $A_{\\mu \\nu} < \\infty$, the absolute integrability of the second term is checked by evaluating\n",
     "\n",
     "\\begin{equation}\n",
     "\\int_{-\\infty}^{\\infty} |\\epsilon(t) t^{\\mu - 1} e^{s_{\\infty \\mu} t}| \\; dt = \\int_0^{\\infty} t^{\\mu - 1} e^{\\sigma_{\\infty \\mu} t} \\; dt\n",
@@ -161,10 +159,12 @@
     "\n",
     "where $s_{\\infty \\mu} = \\sigma_{\\infty \\mu} + j \\omega_{\\infty \\mu}$. Above integral is absolutely integrable if $\\sigma_{\\infty \\mu} < 0$. \n",
     "\n",
-    "From above results it can be concluded that a system with rational transfer function $H(s)$ and right-sided impulse response $h(t)$ is stable with respect to the BIBO criterion if\n",
+    "If $M > N$, the system is not stable in the BIBO sense. This statement can be proven by a counterexample. If $M > N$, a polynominal in $s$ with positive powers can be split off from the transfer function $H(s)$ by polynominal division. Lets consider one of these terms, for instance $H(s) = s$. It follows by application of the derivation theorem that $h(t) = \\frac{d}{dt} \\delta(t)$. For the bounded input signal $x(t) = \\cos(\\omega_0 t \\cdot t)$, the output signal $y(t) = \\cos(\\omega_0 t \\cdot t) * \\frac{d}{dt} \\delta(t) = \\frac{d}{dt} \\cos(\\omega_0 t \\cdot t) = - 2 \\omega_0 t \\sin(\\omega_0 t \\cdot t)$ is not bounded for $t \\to \\infty$. The same argumentation holds for positive powers of $s$ by repeated application of the derivation theorem.\n",
     "\n",
-    "* the order $M$ of its numerator is smaller or equal to the order $N$ of its numerator and \n",
-    "* all poles are located in the left $s$-half-plane\n",
+    "Combining the results it can be concluded that a system with rational transfer function $H(s)$ and right-sided impulse response $h(t)$ is stable with respect to the BIBO criterion if\n",
+    "\n",
+    "1. the order $M$ of its numerator is smaller or equal to the order $N$ of its numerator and \n",
+    "1. all poles are located in the left $s$-half-plane\n",
     "    \\begin{equation}\n",
     "    \\Re \\{ s_{\\infty \\mu} \\} < 0 \\qquad \\forall \\mu\n",
     "    \\end{equation}\n",
